samples/_failures_safe/1761540441_401c78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e614178.c: In function ‘main’:
./samples/SAFE/__tmp_1e614178.c:167:9: error: expected declaration or statement at end of input
  167 |         free_matrix(mat2);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_1e614178.c:167:9: error: expected declaration or statement at end of input
